# enc

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  install.ps1  install.sh
.github/workflows/: release.yml
docs/: FORMAT.md  USAGE.md
src/: main.rs
