[package]
name = "enc"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "enc"
path = "src/main.rs"

[dependencies]
aes-gcm = "0.10"   # pure-Rust AES-256-GCM (RustCrypto)
hex = "0.4"        # decode the ENC_KEY hex string
getrandom = "0.2"  # OS CSPRNG for the random IV
tar = "0.4"        # pack/unpack directories (folder mode)
sha2 = "0.10"      # SHA-256 (the standalone `sha256` command)
scrypt = "0.11"    # password -> key derivation (password mode, v3)

# Release profile: opt-level 3 = optimize for SPEED.
# (opt-level = "z" makes a ~150 KB binary but noticeably slower crypto.)
[profile.release]
opt-level = 3
lto = true
strip = true
